feat: Added edit user profile. Added user delete
