# lib/register.js
@@ -67,3 +67,39 @@ export async function register(res,user) {
       return;
    }
 }
+
+
+
+/**
+ * Authenticates a user based on provided credentials.
+ *
+ * This function verifies user authentication by matching the provided
+ * credentials against the database records.
+ *
+ * @param {Object} req - The Express request object.
+ * @param {Object} res - The Express response object.
+ * @returns {void}
+ */
+export async function authuser(req, res) {
+   let login = req.body;
+   if(!isValidString(login._id)){
+      res.status(400).send("Invalid ID");
+      return;
+   }
+   if(!isValidString(login.username) ){
+      return;
+   }
+   try{
+      let loggedUser = await database.check_user_credentials(login);
+      if (loggedUser == null) {
+         res.status(401).send("Unauthorized");
+         return;
+      } else {
+         res.json(loggedUser);
+         return;
+      }
+   }catch(e){
+      res.status(500).send("Internal Error");
+      return;
+   }
+}
